--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,61 +1,26 @@
-if (NOT HIKARI_BUILD_IN_TREE)
-project(LLVMObfuscation)
-cmake_minimum_required(VERSION 3.4.3)
-find_package(LLVM REQUIRED CONFIG)
-message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
-message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
-include_directories(${LLVM_INCLUDE_DIRS})
-add_definitions(${LLVM_DEFINITIONS})
-add_library(LLVMObfuscationCommon STATIC
-  src/Passes/FunctionCallObfuscate.cpp
-  src/CryptoUtils.cpp
-  src/Passes/BogusControlFlow.cpp
-  src/Passes/Substitution.cpp
-  src/Passes/Flattening.cpp
-  src/Utils.cpp
-  src/Passes/SplitBasicBlocks.cpp
-  src/Passes/AntiClassDump.cpp
-  src/Passes/StringEncryption.cpp
-  src/Passes/IndirectBranch.cpp
-  src/Passes/FunctionWrapper.cpp
-  src/PassScheduler.cpp
-  src/LegacyLowerSwitch.cpp
-)
-target_include_directories(LLVMObfuscationCommon PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
-execute_process(
-  COMMAND git log -1 --format=%H
-  WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
-  OUTPUT_VARIABLE HIKARI_GIT_COMMIT_HASH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-target_compile_definitions(LLVMObfuscationCommon PRIVATE "-DGIT_COMMIT_HASH=\"${HIKARI_GIT_COMMIT_HASH}\"")
+find_package(Corrosion REQUIRED)
 
-add_library(LLVMObfuscation SHARED
-  ${CMAKE_CURRENT_LIST_DIR}/src/AddPasses/Register_Passes.cpp
-)
-target_link_libraries(LLVMObfuscation LLVMObfuscationCommon)
-target_include_directories(LLVMObfuscation PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
-
-else()
 add_llvm_library(LLVMObfuscationCommon
-  src/Passes/FunctionCallObfuscate.cpp
   src/CryptoUtils.cpp
-  src/Passes/BogusControlFlow.cpp
-  src/Passes/Substitution.cpp
-  src/Passes/Flattening.cpp
-  src/Utils.cpp
-  src/Passes/SplitBasicBlocks.cpp
-  src/Passes/AntiClassDump.cpp
-  src/Passes/StringEncryption.cpp
-  src/Passes/IndirectBranch.cpp
-  src/Passes/FunctionWrapper.cpp
-  src/PassScheduler.cpp
   src/LegacyLowerSwitch.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/src/AddPasses/Register_Passes.cpp
+  src/PassScheduler.cpp
+  src/Passes/AntiClassDump.cpp
+  src/Passes/BogusControlFlow.cpp
+  src/Passes/Flattening.cpp
+  src/Passes/FunctionCallObfuscate.cpp
+  src/Passes/FunctionWrapper.cpp
+  src/Passes/IndirectBranch.cpp
+  src/Passes/SplitBasicBlocks.cpp
+  src/Passes/StringEncryption.cpp
+  src/Passes/Substitution.cpp
+  src/RegisterPass.cpp
+  src/Utils.cpp
   DEPENDS
   intrinsics_gen
-  )
+)
 target_include_directories(LLVMObfuscationCommon PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
+corrosion_import_crate(MANIFEST_PATH nanorand/Cargo.toml CRATES nanorand-abi)
+target_link_libraries(LLVMObfuscationCommon PUBLIC nanorand)
 execute_process(
   COMMAND git log -1 --format=%H
   WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
@@ -63,44 +28,6 @@ execute_process(
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 target_compile_definitions(LLVMObfuscationCommon PRIVATE "-DGIT_COMMIT_HASH=\"${HIKARI_GIT_COMMIT_HASH}\"")
-endif()
-
-if(APPLE)
-  SET(CMAKE_BUILD_WITH_INSTALL_NAME_DIR TRUE)
-  set(CMAKE_CXX_FLAGS "-std=c++14")
-  execute_process(
-    COMMAND cp ${CMAKE_CURRENT_LIST_DIR}/substitute/libsubstitute.dylib .
-  )
-
-  # LLVMObfuscationDeps handling
-  add_library(LLVMObfuscationDeps SHARED
-    ${CMAKE_CURRENT_LIST_DIR}/src/Dummy.cpp
-  )
-  target_link_options(LLVMObfuscationDeps PRIVATE -undefined PRIVATE dynamic_lookup PRIVATE -all_load)
-  target_link_libraries(LLVMObfuscationDeps PRIVATE LLVMCore LLVMSupport)
-  # LLVMObfuscation
-  target_link_options(LLVMObfuscation PRIVATE -undefined PRIVATE dynamic_lookup PRIVATE -flat_namespace)
-  
-  # LLVMObfuscation hooking mode
-  add_library(LLVMObfuscationHook SHARED
-    ${CMAKE_CURRENT_LIST_DIR}/src/AddPasses/Loader_Hook.cpp
-  )
-  target_link_options(LLVMObfuscationHook PRIVATE -undefined PRIVATE dynamic_lookup PRIVATE -flat_namespace)
-  target_include_directories(LLVMObfuscationHook PRIVATE ${CMAKE_CURRENT_LIST_DIR}/substitute)
-  target_include_directories(LLVMObfuscationHook PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
-  target_link_directories(LLVMObfuscationHook PRIVATE ${CMAKE_CURRENT_LIST_DIR}/substitute)
-  target_link_libraries(LLVMObfuscationHook LLVMObfuscationDeps LLVMObfuscationCommon substitute)
-  add_custom_target(install_name_tool_substitute ALL
-    COMMAND install_name_tool -change @executable_path/libsubstitute.dylib @loader_path/libsubstitute.dylib ./libLLVMObfuscationHook.dylib
-	DEPENDS LLVMObfuscationHook
-  ) 
-  add_custom_target(install_name_tool_deps ALL
-    COMMAND install_name_tool -change @rpath/libLLVMObfuscationDeps.dylib @loader_path/libLLVMObfuscationDeps.dylib ./libLLVMObfuscationHook.dylib
-        DEPENDS LLVMObfuscationHook
-  )
- 
-else()
-endif(APPLE)
 
 if(UNIX AND NOT APPLE)
   set(CMAKE_CXX_FLAGS "-fPIC")
